# sec-audit

./: .gitignore  LICENSE  README.md  history-purge-runbook.md  mac-handoff-prompt.md  nice-dns-fix-prompt.md  push-purged-history.sh  sec-audit-report-20260527-2055.md  sec-audit-report-20260709-1738.md
.claude-plugin/: marketplace.json  plugin.json
agents/: ai-tools-runner.md  android-runner.md  ansible-runner.md  c-cpp-runner.md  cve-enricher.md  dast-runner.md  dep-diff-analyst.md  finding-triager.md  gh-actions-runner.md  go-runner.md  iac-runner.md  image-runner.md  ios-runner.md  k8s-runner.md  linux-runner.md  macos-runner.md  netcfg-runner.md  php-runner.md  python-runner.md  report-writer.md  rust-runner.md  sast-runner.md  sec-expert.md  secrets-runner.md  shell-runner.md  supply-chain-runner.md  virt-runner.md  webapp-runner.md  webext-runner.md  windows-runner.md
commands/: sec-audit.md  sec-review.md
tests/: ai-tools-drill.sh  ai-tools-e2e.sh  android-drill.sh  android-e2e.sh  ansible-drill.sh  ansible-e2e.sh  baseline-v0.1.0-metrics.txt  baseline-v0.2.0-cost.json  baseline-v0.2.0-metrics.txt  baseline-v0.2.0-tokens.json  baseline-v0.3.0-tokens-stage3.json  baseline-v1.20-scripts.md  c-cpp-drill.sh  c-cpp-e2e.sh  ci-local.sh  compat-v0.1.0.md  contract-check.sh  dast-drill.sh  deep-deps-drill.sh  deep-deps-e2e.sh  (+51 more)
tests/fixtures/vulnerable-rust/: Cargo.toml  README.md  build.rs
tests/fixtures/vulnerable-rust/.pipeline/: cargo-audit-report.json  cargo-deny-report.json  cargo-geiger-report.json  rust.jsonl
tests/fixtures/vulnerable-rust/src/: main.rs
(+378 files in other folders)
